--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "description": "This repository is the part of nodejs-assignments https://github.com/AlreadyBored/nodejs-assignments",
     "type": "module",
     "scripts": {
-      "fm": "node node/src/index.js --username=Anonim"
+      "start": "node src/index.js --username=Anonim"
     },
     "repository": {
       "type": "git",
